# Research_Project

./: .gitignore  verify_latest.txt  verify_scenarios.py
.claude/: settings.local.json
aas-sim/: .env.example  README.md  docker-compose.yml  kill-port-3000.bat
aas-sim/backend/: config.yaml  pyproject.toml  simulation_state.json
aas-sim/backend/app/: main.py  models.py
aas-sim/backend/app/api/: composer.py
aas-sim/backend/app/api/v1/: aas.py  config.py  cycle.py  history.py  queue.py  sse.py
aas-sim/backend/app/core/: database.py  logging.py  orchestrator.py  rules.py  state.py
aas-sim/backend/tests/: test_api.py  test_billing.py
aas-sim/docker/: backend.Dockerfile  frontend.Dockerfile
aas-sim/frontend/: .env.local  next.config.js  package-lock.json  package.json  tailwind.config.js
aas-sim/frontend/app/: globals.css  layout.tsx  page.tsx
aas-sim/frontend/app/billing/: page.tsx
aas-sim/frontend/app/composer/: page.tsx
aas-sim/frontend/app/config/: page.tsx
aas-sim/frontend/app/jobs/: page.tsx
aas-sim/frontend/app/scenarios/: page.tsx
aas-sim/frontend/components/: BatchBuilder.tsx  BillingCard.tsx  CombinedCard.tsx  ComposerModeToggle.tsx  DeviceCard.tsx  DirectForm.tsx  JobInputForm.tsx  JobQueue.tsx  MiniMap.tsx  QueueTable.tsx  ScenarioButtons.tsx
aas-sim/frontend/lib/: api.ts  composerApi.ts  types.ts
paper/: A Simulation-Based AAS Architecture for Usage-Based Operation and Billing of Modular Devices.docx  analysis_report.md
